--- a/.travis.yml
+++ b/.travis.yml
@@ -39,8 +39,8 @@ matrix:
             #- libextractor-dev
       env: CPPFLAGS=-D_GLIBCXX_DEBUG
       before_script:
-            - wget http://ftpmirror.gnu.org/libextractor/libextractor-1.3.tar.gz
-            - tar xzvf libextractor-1.3.tar.gz
+            - wget http://archive.ubuntu.com/ubuntu/pool/universe/libe/libextractor/libextractor_1.3.orig.tar.gz
+            - tar xzvf libextractor_1.3.orig.tar.gz
             - cd libextractor-1.3/
             - ./configure && make && sudo make install
     - compiler: clang
