--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ matrix:
             - wget http://archive.ubuntu.com/ubuntu/pool/universe/libe/libextractor/libextractor_1.3.orig.tar.gz
             - tar xzvf libextractor_1.3.orig.tar.gz
             - cd libextractor-1.3/
-            - ./configure && make && sudo make install
+            - ./configure && make -i && sudo make install
     - compiler: clang
       os: linux
       # Clang is already installed, but we want to build using the
