--- a/.travis.yml
+++ b/.travis.yml
@@ -39,10 +39,10 @@ matrix:
             #- libextractor-dev
       env: CPPFLAGS=-D_GLIBCXX_DEBUG
       before_script:
-            - wget http://archive.ubuntu.com/ubuntu/pool/universe/libe/libextractor/libextractor_1.3.orig.tar.gz
-            - tar xzvf libextractor_1.3.orig.tar.gz
-            - cd libextractor-1.3/
-            - ./configure && make -i && sudo make install
+            - wget http://archive.ubuntu.com/ubuntu/pool/universe/libe/libextractor/libextractor_1.4.orig.tar.gz
+            - tar xzvf libextractor_1.4.orig.tar.gz
+            - cd libextractor-1.4/
+            - ./configure && make && sudo make install
     - compiler: clang
       os: linux
       # Clang is already installed, but we want to build using the
