--- a/.travis.yml
+++ b/.travis.yml
@@ -142,8 +142,6 @@ matrix:
             - libarchive
             - libcdr
             - libetonyek
-            - libvorbis
-            - libextractor
             - libiconv
             - libmagic
             - libsvm
@@ -161,6 +159,10 @@ matrix:
         - travis_retry pip3 install sphinx
         - mkdir -p /tmp/xapian-libsvm-fixed-include
         - ln -sF "`ls -1d /usr/local/Cellar/libsvm/3.*/include|tail -n 1`" /tmp/xapian-libsvm-fixed-include/libsvm
+        - curl "ftp://ftp.gnu.org/gnu/libextractor/libextractor-1.9.tar.gz" -o "libextractor-1.9.tar.gz"
+        - tar xf libextractor-1.9.tar.gz
+        - cd libextractor-1.9
+        - ./configure && make && make install
       install:
         # Enable use of ccache to speed up builds.
         - export PATH=/usr/local/opt/ccache/libexec:$PATH
